@@ -1,3 +1,12 @@
+2010-04-30  Alex Harsanyi  <AlexHarsanyi@gmail.com>
+
+	* jira2.el (jira2-login): bugfix: pass username and password to
+	the jira web login page.
+	(jira2-login, jira2-link-issue): add basic check that the URL
+	response is OK.
+	(jira2-login, jira2-link-issue): `url-http-response-status' is
+	only bound in the response buffer
+
 2010-04-22  Alex Harsanyi  <AlexHarsanyi@gmail.com>
 
 	* jira2.el (jira2-token): new variable
